integration/trustee/templates/kbs-route.yaml
# Single cluster deploy don't use the route yet.
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kbs
  namespace: trustee-operator-system
  annotations:
    argocd.argoproj.io/sync-wave: "8"
spec:
  subdomain: kbs
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kbs-service
    weight: 100
  tls:
    termination: passthrough
